PY-02/ingresses/faculties-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: faculties-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: olympics.local # Remover cuando se despliegue en GKE, ya que no se configurará el DNS.
      http:
        paths:
          - path: /agronomy
            pathType: Prefix
            backend:
              service:
                name: agronomy-faculty-service
                port:
                  number: 80
          - path: /engineering
            pathType: Prefix
            backend:
              service:
                name: engineering-faculty-service
                port:
                  number: 80
